Bug 42187 - ES 1.1 conformance pntszary.c fail
Summary: ES 1.1 conformance pntszary.c fail
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/i965 (show other bugs)
Version: git
Hardware: All Linux (All)
: medium normal
Assignee: Plamena Manolova
QA Contact: Intel 3D Bugs Mailing List
URL:
Whiteboard:
Keywords:
: 91733 92364 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-10-25 00:58 UTC by bo.b.wang
Modified: 2016-06-02 18:47 UTC (History)
3 users (show)

See Also:
i915 platform:
i915 features:


Attachments
Proposed Patch (6.31 KB, patch)
2016-02-26 11:58 UTC, Plamena Manolova
Details | Splinter Review

Description bo.b.wang 2011-10-25 00:58:51 UTC
System Environment:
-------------------------------------
Libdrm:        (master)2.4.26-12-gb317c96361f88a0a4ccb2faeff09b0476d142c68
Mesa:        (master)116b7bb5eac836953fbfbc627cabca4a7ee39937
Xf86_video_intel:(master)2.16.0-176-g0b83abfb2bc3f65447205048ae0af1a94fa9ef15
Cairo:        (master)26c9994393f590c43714ba8d799093b84dd94dc6
Libva:        (master)c532920f95c9cd55516c038d769f236ac7e88ccc
Kernel:    (drm-intel-next) 64a742fac3a22f57303d8f1b7e34

Bug Description:
---------------------
Ogles1conform/ogles1conform/es1/conform/conform/conform -s -v 2 -1 pntszary.c will fail on SandyBridge and PikeTon
Comment 1 Kenneth Graunke 2016-01-29 02:21:30 UTC
*** Bug 91733 has been marked as a duplicate of this bug. ***
Comment 2 Kenneth Graunke 2016-01-29 02:21:39 UTC
*** Bug 92364 has been marked as a duplicate of this bug. ***
Comment 3 Matt Turner 2016-02-23 19:02:43 UTC
Leave the QA contact as is so that the mailing list gets updates.
Comment 4 Plamena Manolova 2016-02-24 15:06:09 UTC
(In reply to Matt Turner from comment #3)
> Leave the QA contact as is so that the mailing list gets updates.

Sorry about that I must have changed it by accident.
Comment 5 Plamena Manolova 2016-02-26 11:58:27 UTC
Created attachment 121983 [details] [review]
Proposed Patch
Comment 6 Plamena Manolova 2016-02-26 11:59:39 UTC
(In reply to bo.b.wang from comment #0)
> System Environment:
> -------------------------------------
> Libdrm:        (master)2.4.26-12-gb317c96361f88a0a4ccb2faeff09b0476d142c68
> Mesa:        (master)116b7bb5eac836953fbfbc627cabca4a7ee39937
> Xf86_video_intel:(master)2.16.0-176-g0b83abfb2bc3f65447205048ae0af1a94fa9ef15
> Cairo:        (master)26c9994393f590c43714ba8d799093b84dd94dc6
> Libva:        (master)c532920f95c9cd55516c038d769f236ac7e88ccc
> Kernel:    (drm-intel-next) 64a742fac3a22f57303d8f1b7e34
> 
> Bug Description:
> ---------------------
> Ogles1conform/ogles1conform/es1/conform/conform/conform -s -v 2 -1
> pntszary.c will fail on SandyBridge and PikeTon

Hi Bo,
Could you verify whether the proposed patch fixes the issue for you?
Comment 7 Matt Turner 2016-02-26 20:20:26 UTC
(In reply to Plamena Manolova from comment #6)
> Hi Bo,
> Could you verify whether the proposed patch fixes the issue for you?

I strongly suspect Bo is no longer at Intel (or working on the same team). If you're able to test the patch and it fixes something, please send it to the mailing list.

Thanks a bunch for taking a look at this bug. :)
Comment 8 Plamena Manolova 2016-03-01 16:08:42 UTC
(In reply to Matt Turner from comment #7)
> (In reply to Plamena Manolova from comment #6)
> > Hi Bo,
> > Could you verify whether the proposed patch fixes the issue for you?
> 
> I strongly suspect Bo is no longer at Intel (or working on the same team).
> If you're able to test the patch and it fixes something, please send it to
> the mailing list.
> 
> Thanks a bunch for taking a look at this bug. :)

Thanks Matt, I'll go ahead and send the patch.
Comment 9 Matt Turner 2016-06-02 18:47:22 UTC
commit 9d9965c06f18f7d609933e511b98514570e85909
Author: Plamena Manolova <plamena.manolova@intel.com>
Date:   Tue Mar 15 20:39:49 2016 +0200

    mesa: Ignore glPointSize when GL_POINT_SIZE_ARRAY_OES is enabled


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.